Fix #83, spacing is reduced between two consecutive headings

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -16,6 +16,15 @@ h2,
 h3 {
   margin-top: 2.5em;
 }
+h4,
+h5 {
+  margin-top: 2em;
+}
+.header + .header h3,
+.header + .header h4,
+.header + .header h5 {
+  margin-top: 1em;
+}
 .sidebar {
   position: absolute;
   left: 0;
