--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -16,3 +16,6 @@ html, body {
 }
 
 h2, h3 { margin-top: 2.5em }
+h4, h5 { margin-top: 2em }
+
+.header + .header h3, .header + .header h4, .header + .header h5 { margin-top: 1em }
